--- a/Projeto-Rocketseat/style.css
+++ b/Projeto-Rocketseat/style.css
@@ -1,27 +1,47 @@
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     background-color: black;
+    color:white;
+    text-align: center;
+    font-family: sans-serif;
 }
-.flex-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
+#container{
+   margin-top: 100px;
+   width: 80%;
+   max-width: 400px;
+   margin-inline: auto;    
 }
-h1, p, .botao{
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h1{
+    margin-top: 40px;
+    margin-bottom: 10px;
+    opacity: 0.9;
+}
+p{
+    margin-bottom: 40px; 
+    opacity: 0.7;
+}
+input, button {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 4px;
 }
 input{
-    margin-top: 20px;
-    padding: 20px;
-    width: 200px;
+    margin-bottom: 20px;
 }
-.botao{
-    margin-top: 20px;
-    padding: 20px;
-    width: 200px;
-    background-color:#8A2BE2;
-    border-radius: 5px;
+button{
+    border: none;
+    background: blueviolet;
     color: white;
-    font-size: 1.2rem;
+    transition: filter .2s;
 }
+button:hover{
+    filter: brightness(1.2);
+    cursor: pointer;
+    
+}
+
