--- a/Projeto-Rocketseat/style.css
+++ b/Projeto-Rocketseat/style.css
@@ -44,4 +44,14 @@ button:hover{
     cursor: pointer;
     
 }
+#resposta{
+    margin-top: 30px;
+    transition: opacity 1s;
+}
+#resposta div{
+    font-size: 16px;
+    font-weight: normal;
+    opacity: 0.9;
+    margin-bottom: 10px;
+}
 
