--- a/projeto-instagram/style.css
+++ b/projeto-instagram/style.css
@@ -44,16 +44,17 @@ body{
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: #ffff;
-    padding: 1.3rem 0;
-    border: 1px solid lightgray
-
+    background-color: #ffffff;
+    padding: 1.3rem;
+    border: 1px solid lightgray;
+    width: 100%;
+    margin-bottom: 7px;
 }
 .grupo:nth-child(1){
-    min-height: 19rem;
+    min-height: 10rem;
 }
 .instagram-logo{
-    height: 3rem;
+    height: 5rem;
 }
 .perfil-foto{
     display: flex;
@@ -64,4 +65,80 @@ body{
 }
 .perfil-foto img{
     height: 6rem;
+}
+.login{
+    background-color:#0095f6 ;
+    color:#ffffff;
+    padding: 8px;
+    border-radius: 4px;
+    margin-top: 1rem;
+}
+.logout{
+    color: #0095f6;
+    margin-top: 1rem;
+}
+.not-account{
+    color: rgb(160, 160, 160);
+}
+.link-azul{
+    color:#0095f6;
+}
+.app{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 1.3rem;
+}
+.get-app{
+    font-weight: bold;
+    font-size: 14px;
+}
+.download{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+.app-download{
+    height: 3rem;
+    width: 10rem;
+    background-size: cover;
+    margin: 0 4px;
+}
+.app-download:nth-child(1){
+    background-image: url(./botão-googlePlay.png);
+
+}
+.app-download:nth-child(2){
+    background-image: url(./disponivel-na-app-store-botao-1.png);
+}
+@media (max-width: 1024px) {
+    .instagram-wrap {
+        width: 90%;
+    }
+}
+
+@media (max-width: 650px) {
+    body {
+        background-color: #ffffff;
+    }
+
+    .instagram-wrap {
+        width: 90%;
+    }
+
+    .instagram-phone {
+        display: none;
+    }
+
+    .instagram-continue {
+        width: 100%;
+    }
+    
+    .grupo {
+        border: 1px solid transparent;
+    }
 }
